--- a/spec/fixtures/app/i18n/en.yml
+++ b/spec/fixtures/app/i18n/en.yml
@@ -1,6 +1,14 @@
-hello: "Hello from app/i18n/en.yml"
+hello: "Hello from ./app/i18n/en.yml"
 
 do:
   you:
     speak:
       english: Do you speak English?
+
+user:
+  edit: Edit user
+  name: User name is %1
+  count: !!pl
+    1: There is 1 user
+    n: There are %1 users
+
