Minor changes to fixtures

--- a/spec/fixtures/app/i18n/es.yml
+++ b/spec/fixtures/app/i18n/es.yml
@@ -6,3 +6,11 @@ do:
   you:
     speak:
       spanish: "¿Hablas español?"
+
+user:
+  edit: Editar usuario
+  name: Nombre de usuario es %1
+  count: !!pl
+    1: Hay 1 usuario
+    n: Hay %1 usuarios
+
