--- a/spec/fixtures/app/i18n/de.yml
+++ b/spec/fixtures/app/i18n/de.yml
@@ -8,7 +8,7 @@ do:
       
 user:
   edit: Benutzer bearbeiten
-  name: Benutzername ist %1
+  name: "Benutzername ist %1"
   count: !!pl
     1: Ist 1 Benutzer
-    n: Es gibt %1 Benutzer
+    n: "Es gibt %1 Benutzer"
