achieve 100 % coverage (branch coverage, too)
an have a CI pipeline you can rely on :muscle:

removes files for local/dockered testing the remaining bug sv-SE, as ci is doing linux checks from now on

drops devcontainer as CI will check across multiple OS

clean up GitHub CI file

we can add a dockered pipeline any time if needed 🥳

--- a/spec/fixtures/i18n/de.yml
+++ b/spec/fixtures/i18n/de.yml
@@ -8,11 +8,6 @@ params: "Ist %3 zwischen %1 und %2?"
 in:
   another: Hierarchisch
 
-# only:
-#   english: "Nein, nicht auf Englisch"
-
-# sum: !!proc |x, y| x + y
-
 post:
   title: "Blog-beitrag: '%1'"
   comments: !!pl
@@ -20,11 +15,9 @@ post:
     1: "einen kommentar '%2'"
     n: "'%1' kommentare zum '%2'"
 
-greater: 1 < 2 ist wahr
+greater: "1 < 2 ist wahr"
 
 warning: !!html <b>Warnung</b>
-
-
 
 files: !!pl
   1: 1 datei
