--- a/spec/fixtures/app/i18n/en.yml
+++ b/spec/fixtures/app/i18n/en.yml
@@ -1,4 +1,4 @@
-hello: "Hello from ./app/i18n/en.yml"
+hello: "Hello from app/i18n/en.yml"
 
 do:
   you:
@@ -11,4 +11,3 @@ user:
   count: !!pl
     1: There is 1 user
     n: "There are %1 users"
-
