FIX: tests working on Linux
Hattip: @simonneutert for discovering that
`spec/fixtures/i18n/sv-se.yml` should be renamed as `sv-SE.yml` instead

Now all tests pass on Ubuntu 24.04 & Ruby 3.x

--- a/spec/fixtures/i18n/sv-SE.yml
+++ b/spec/fixtures/i18n/sv-SE.yml
@@ -1,4 +1,4 @@
-hello: "Hej från ./i18n/sv-se.yml"
+hello: "Hej från i18n/sv-SE.yml"
 
 one: Ett
 two: Två
@@ -8,14 +8,12 @@ do:
     speak:
       swedish: "Pratar du svenska?"
 
-
 user:
   # edit: Edit user
   name: Användarnamn är %1
   count: !!pl
     1: Det finns en användare
     n: Det finns %1 användare
-
 
 params: Är %1 mellan %1 och %2?
 
@@ -24,13 +22,11 @@ in:
 
 # only:
 #   english: "Nej, inte på engelska"
-  
 
 robots: !!pl
   0: Inga robotar
   1: En robot
   n: "%1 robotar"
-
 
 svenska: "Denna finns bara i svenska översättningarna"
 
